--- a/Nginx/Dockerfile
+++ b/Nginx/Dockerfile
@@ -1,14 +1,21 @@
 # Pull base image.
-FROM dockerfile/ubuntu
+FROM ubuntu
+
+
+RUN apt-get update
+#RUN apt-get dist-upgrade -y
 
 # Install Nginx.
 RUN \
+  apt-get -y install python-software-properties && \
+  apt-get -y install software-properties-common && \
   add-apt-repository -y ppa:nginx/stable && \
-  apt-get update && \
   apt-get install -y nginx && \
   rm -rf /var/lib/apt/lists/* && \
-  cp nginx.conf /etc/nginx/nginx.conf && \
-  chown -R www-data:www-data /var/lib/nginx
+  chown -R www-data:www-data /var/lib/nginx && \
+  useradd nginx 
+
+COPY nginx.conf /etc/nginx/nginx.conf 
 
 # Define mountable directories.
 VOLUME ["/etc/nginx/sites-enabled", "/etc/nginx/certs", "/etc/nginx/conf.d", "/var/log/nginx", "/var/www/html"]
